# nano-llm

./: .gitignore  README.md  config.yaml.example  create_notebook.py  inference.py  kaggle.json  makefile  notebook-example.ipynb  notebook.ipynb  pyproject.toml  retrain_tokenizer.py  test_config.py  tokenizer.py  train.py
kaggle/: kernel-metadata.json  train-llm-en.ipynb  train-llm.ipynb
kaggle/notebook/: kernel-metadata.json  train-llm-en.ipynb
kaggle/secrets/: dataset-metadata.json
src/: __init__.py  dataset.py  env_loader.py  inference.py  model.py  test.py  tokenizer.py  train.py
src/dataset/: __init__.py  base.py  cluecorpus.py  factory.py  tinystories.py  tokenized.py  tokenizer.py
src/utils/: env_loader.py  file_collector.py  kaggle_utils.py  upload_kaggle.py  wandb_utils.py
