[project]
name = "nano-llm"
version = "0.1.0"
description = "轻量级LLM模型实现，使用TinyStories数据集和HuggingFace分词器"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.10.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.1",
    "kaggle",
    "wandb>=0.24.2",
    "torch>=2.8.0",
    "torchvision>=0.19.0",
    "pyyaml>=6.0",
    "modelscope>=1.34.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
default = false

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
kaggle = { git = "https://github.com/Kaggle/kaggle-cli.git" }
